[package]
name = "yield_watcher"
version = "0.1.0"
authors = ["Yamashi"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"]}
reqwest = { version = "0.11", features = ["rustls-tls", "json"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.0"
chrono = "0.4"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
simple_logger = "1"
structopt = "0.3"